syntax = "proto3";

package greet.v1;
option go_package = "api/greet/v1";

message GreetRequest {
  string country_code = 1;
  string user_name = 2;
}

message GreetResponse {
  string result = 1;
}
